--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -13,14 +13,15 @@ html {
 }
 
 body {
+  width: 320px;
   margin: 0;
   padding: 0;
 
-  font-weight: normal;
+  font-weight: 400;
   font-size: 14px;
   line-height: 18px;
   font-family: "Oswald", "Arial", sans-serif;
-  color: 444444;
+  color: #444444;
 
   background-color: #ffffff;
 }
@@ -34,29 +35,10 @@ img {
   height: auto;
 }
 
-.visually-hidden:not(:focus):not(:active),
-input[type="checkbox"].visually-hidden,
-input[type="radio"].visually-hidden {
-  position: absolute;
-
-  width: 1px;
-  height: 1px;
-  margin: -1px;
-  padding: 0;
-  overflow: hidden;
-
-  white-space: nowrap;
-
-  border: 0;
-
-  clip: rect(0 0 0 0);
-  clip-path: inset(100%);
-}
-
+@import "./blocks/visually-hidden";
 @import "./blocks/page-header";
 @import "./blocks/main-nav";
 @import "./blocks/page-main";
-@import "./blocks/visually-hidden";
 @import "./blocks/programs";
 @import "./blocks/button";
 @import "./blocks/program-types";
