--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -21,7 +21,7 @@ body {
   font-size: 14px;
   line-height: 18px;
   font-family: "Oswald", "Arial", sans-serif;
-  color: #444444;
+  color: $light-black;
 
   background-color: #ffffff;
 }
