--- a/source/sass/blocks/button.scss
+++ b/source/sass/blocks/button.scss
@@ -1,8 +1,11 @@
 .button {
+  font-size: 16px;
+  line-height: 20px;
   color: #ffffff;
   text-transform: uppercase;
 
   background-color: $green;
+  border: none;
 
   &--all {
     color: $light-black;
