Начальная верстка. Поменял названия классов в форме (почта и телефон).

--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -57,6 +57,6 @@ img {
 @import "./blocks/form";
 @import "./blocks/input-text";
 @import "./blocks/input-radio";
-@import "./blocks/input-email";
-@import "./blocks/input-tel";
+// @import "./blocks/input-email";
+// @import "./blocks/input-tel";
 @import "./blocks/input-checkbox";
