--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -4,3 +4,5 @@ $gray: #f2f2f2;
 $light-black: #444444;
 $input-black: #222222;
 $arial: "Arial", sans-serif;
+$tablet-width: 768px;
+$desktop-width: 1300px;
