--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -7,6 +7,7 @@
 @import "./blocks/button";
 @import "./blocks/catalog";
 @import "./blocks/contacts";
+@import "./blocks/container";
 @import "./blocks/copyright";
 @import "./blocks/example";
 @import "./blocks/features";
