--- a/source/sass/blocks/page-footer.scss
+++ b/source/sass/blocks/page-footer.scss
@@ -1,3 +1,30 @@
 .page-footer {
+  display: flex;
+  flex-direction: column;
+  width: 320px;
+  margin: 0 auto;
+
   background-color: $gray;
+}
+
+.footer__wrapper {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+@media (min-width: $tablet-width) {
+  .page-footer {
+    width: 768px;
+  }
+
+  .footer__wrapper {
+    flex-direction: row;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .page-footer {
+    width: 1440px;
+  }
 }
