--- a/source/sass/blocks/catalog.scss
+++ b/source/sass/blocks/catalog.scss
@@ -1,3 +1,8 @@
+.catalog {
+  width: 320px;
+  margin: 0 auto;
+}
+
 .catalog__title {
   font-weight: 400;
   font-size: 36px;
@@ -7,4 +12,29 @@
 
 .catalog__list {
   @include list-reset;
+
+  display: flex;
+  flex-direction: column;
+}
+
+@media (min-width: $tablet-width) {
+  .catalog {
+    width: 768px;
+  }
+
+  .catalog__title {
+    font-size: 60px;
+  }
+
+  .catalog__list {
+    flex-direction: row;
+    flex-wrap: wrap;
+  }
+}
+
+
+@media (min-width: $desktop-width) {
+  .catalog {
+    width: 1440px;
+  }
 }
