--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -1,3 +1,8 @@
+.form {
+  width: 320px;
+  margin: 0 auto;
+}
+
 .form__title {
   font-weight: 400;
   font-size: 36px;
@@ -16,6 +21,12 @@
   text-transform: uppercase;
 }
 
+.form__additional-wrapper {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+}
+
 .form__block-title {
   font-weight: 400;
   font-size: 24px;
@@ -27,7 +38,63 @@
   text-transform: uppercase;
 }
 
+.form__submit-wrapper {
+  display: flex;
+  flex-direction: column;
+}
+
 .form__required {
   line-height: 16px;
   font-family: $arial;
+}
+
+@media (min-width: $tablet-width) {
+  .form {
+    width: 768px;
+  }
+
+  .form__title {
+    font-size: 60px;
+  }
+
+  .form__tagline {
+    font-size: 20px;
+    line-height: 30px;
+  }
+
+  .form__item {
+    font-size: 20px;
+    line-height: 20px;
+  }
+
+  .form__block-title {
+    font-size: 36px;
+    line-height: 36px;
+  }
+
+  .form__additional-wrapper {
+    flex-direction: row;
+  }
+
+  .form__submit-wrapper {
+    flex-direction: row;
+  }
+
+  .form__required {
+    font-size: 16px;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .form {
+    width: 1440px;
+  }
+
+  .form__program-wrapper {
+    display: flex;
+  }
+
+  .form__contacts-wrapper {
+    display: flex;
+  }
 }
