--- a/source/sass/blocks/main-nav.scss
+++ b/source/sass/blocks/main-nav.scss
@@ -13,21 +13,13 @@
 
 .main-nav__link {
   color: $black;
-
-  &:hover {
-    opacity: 0.6;
-  }
-
-  &:active {
-    opacity: 0.3;
-  }
-
-  &--active {
-    border-bottom: 2px solid #68b738;
-  }
 }
 
 @media (min-width: $tablet-width) {
+  .main-nav {
+    width: 440px;
+  }
+
   .main-nav__list {
     display: flex;
     justify-content: space-between;
@@ -47,6 +39,10 @@
 }
 
 @media (min-width: $desktop-width) {
+  .main-nav {
+    width: 480px;
+  }
+
   .main-nav__item {
     font-size: 20px;
   }
