--- a/source/sass/blocks/page-header.scss
+++ b/source/sass/blocks/page-header.scss
@@ -13,11 +13,53 @@
 }
 
 .page-header__logo {
+  position: relative;
+
   height: 65px;
-  padding-top: 11px;
+  // padding-top: 11px;
 
   border-bottom: 1px solid #e6e6e6;
 }
+
+.page-header__logo-image {
+  padding-top: 11px;
+}
+
+.page-header__nav-toggle {
+  position: absolute;
+  top: 0;
+  right: 0;
+
+  display: block;
+  width: 50px;
+  height: 60px;
+  padding: 0;
+
+  background-color: #ffffff;
+  border: none;
+  cursor: pointer;
+
+  &::after,
+  &::before {
+    content: "";
+    position: absolute;
+    right: 20px;
+
+    width: 20px;
+    height: 2px;
+
+    background-color: #000000;;
+  }
+
+  &::after {
+    transform: rotate(45deg);
+  }
+
+  &::before {
+    transform: rotate(-45deg);
+  }
+}
+
 
 @media (min-width: $tablet-width) {
   .page-header {
@@ -29,17 +71,13 @@
     border: none;
   }
 
-  .page-header__nav {
-    width: 440px;
+  .page-header__nav-toggle {
+    display: none;
   }
 }
 
 @media (min-width: $desktop-width) {
   .page-header {
     width: 1220px;
-  }
-
-  .page-header__nav {
-    width: 480px;
   }
 }
