--- a/source/sass/blocks/social.scss
+++ b/source/sass/blocks/social.scss
@@ -1,7 +1,16 @@
-.social__list {
-  display: flex;
+.social {
+  padding-top: 20px;
+  padding-bottom: 20px;
 
+  border-bottom: 1px solid #d9d9d9;
+}
+
+.social__list {
   @include list-reset;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .social__link {
@@ -10,6 +19,7 @@
   &--vkontakte {
     width: 22px;
     height: 12px;
+    margin-right: 37px;
 
     background-image: url("../../img/icon-vk-mobile.svg");
     background-repeat: no-repeat;
@@ -19,6 +29,7 @@
   &--instagram {
     width: 16px;
     height: 16px;
+    margin-right: 40px;
 
     background-image: url("../../img/icon-insta-mobile.svg");
     background-repeat: no-repeat;
@@ -32,5 +43,13 @@
     background-image: url("../../img/icon-fb-mobile.svg");
     background-repeat: no-repeat;
     background-position: 0 0;
+  }
+}
+
+@media (min-width: $tablet-width) {
+  .social {
+    padding: 0;
+
+    border: none;
   }
 }
