--- a/source/sass/blocks/program-types.scss
+++ b/source/sass/blocks/program-types.scss
@@ -1,19 +1,31 @@
 .program-types {
+  width: 280px;
+  margin: 0 auto;
+
   text-align: left;
 }
 
 .program-types__list {
+  @include list-reset;
+
   display: flex;
   flex-direction: column;
-
-  @include list-reset;
 }
 
 .program-types__item {
+  margin-bottom: 20px;
+  padding-top: 20px;
+  padding-right: 20px;
+  padding-bottom: 20px;
+  padding-left: 20px;
+
   background-color: $gray;
 }
 
 .program-types__title {
+  margin: 0;
+  margin-bottom: 30px;
+
   font-weight: 400;
   font-size: 24px;
   line-height: 37px;
@@ -22,7 +34,13 @@
 }
 
 .program-types__text {
+  margin: 0;
+  margin-bottom: 15px;
+  padding-bottom: 20px;
+
   font-family: $arial;
+
+  border-bottom: 1px solid #d9d9d9;
 }
 
 .program-types__link {
@@ -33,13 +51,31 @@
 }
 
 @media (min-width: $tablet-width) {
+  .program-types {
+    width: 708px;
+  }
+
+  .program-types__item {
+    margin-bottom: 30px;
+    padding-top: 75px;
+    padding-right: 20px;
+    padding-bottom: 60px;
+    padding-left: 50px;
+  }
+
   .program-types__title {
     font-size: 36px;
   }
 
   .program-types__text {
+    width: 375px;
+    margin-bottom: 50px;
+    padding: 0;
+
     font-size: 16px;
     line-height: 24px;
+
+    border: none;
   }
 
   .program-types__link {
@@ -49,7 +85,22 @@
 }
 
 @media (min-width: $desktop-width) {
+  .program-types {
+    width: 1300px;
+  }
+
   .program-types__list {
     flex-direction: row;
+  }
+
+  .program-types__item {
+    width: 50%;
+    margin-right: 40px;
+    margin-left: 40px;
+    padding-right: 55px;
+  }
+
+  .program-types__text {
+    width: auto;
   }
 }
