--- a/source/sass/blocks/program-types.scss
+++ b/source/sass/blocks/program-types.scss
@@ -23,14 +23,30 @@
 }
 
 .program-types__title {
+  position: relative;
+
   margin: 0;
   margin-bottom: 30px;
+  padding-left: 70px;
 
   font-weight: 400;
   font-size: 24px;
   line-height: 37px;
   color: $black;
   text-transform: uppercase;
+
+  &::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+
+    width: 50px;
+    height: 50px;
+
+    background-color: $green;
+    border-radius: 50%;
+  }
 }
 
 .program-types__text {
