--- a/source/sass/blocks/button.scss
+++ b/source/sass/blocks/button.scss
@@ -1,11 +1,16 @@
 .button {
+  padding-top: 10px;
+  padding-right: 25px;
+  padding-bottom: 12px;
+  padding-left: 25px;
+
   font-size: 16px;
   line-height: 20px;
+  text-align: center;
   color: #ffffff;
   text-transform: uppercase;
 
   background-color: $green;
-  border: none;
 
   &--all {
     color: $light-black;
