--- a/source/sass/blocks/programs.scss
+++ b/source/sass/blocks/programs.scss
@@ -6,6 +6,9 @@
 }
 
 .programs__header {
+  margin-bottom: 22px;
+  padding-top: 20px;
+
   color: #ffffff;
 
   background-image: url("../../img/index-background-mobile@1x.jpg");
@@ -13,20 +16,33 @@
   background-position: 0 0;
 }
 
+.programs__header-wrapper {
+  display: flex;
+  flex-direction: column;
+  width: 280px;
+  margin: 0 auto;
+}
+
 .programs__title {
+  margin: 0;
+  margin-bottom: 20px;
+
   font-weight: 400;
   font-size: 36px;
   line-height: 36px;
 }
 
 .programs__slogan {
+  margin: 0;
+  margin-bottom: 20px;
+
   text-transform: uppercase;
 }
 
-.programs__form-link {
-  font-size: 14px;
-  line-height: 18px;
-}
+// .programs__form-link {
+//   font-size: 14px;
+//   line-height: 18px;
+// }
 
 @media (min-width: $tablet-width) {
   .programs {
@@ -38,9 +54,19 @@
 
   .programs__header {
     color: $black;
+
+    background: none;
+  }
+
+  .programs__header-wrapper {
+    align-items: flex-start;
+    width: 708px;
+    padding-left: 90px;
   }
 
   .programs__title {
+    width: 430px;
+
     font-size: 60px;
     line-height: 60px;
   }
@@ -49,10 +75,31 @@
     font-size: 20px;
     line-height: 20px;
   }
+
+  .programs__picture {
+    position: relative;
+
+    order: 1;
+    margin-top: -50px;
+  }
+
+  .programs__form-link {
+    position: relative;
+
+    margin-top: -1px;
+  }
 }
 
 @media (min-width: $desktop-width) {
   .programs {
     width: 1300px;
+  }
+
+  .programs__header-wrapper {
+    width: 1220px;
+  }
+
+  .programs__picture {
+    transform: translateX(500px) translateY(-100px);
   }
 }
