--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -7,7 +7,7 @@
   padding-bottom: 25px;
   padding-left: 20px;
 
-  background-color: #ffffff;
+  background-color: $gray;
 }
 
 .contacts__text {
@@ -62,6 +62,8 @@
     width: 570px;
     padding-top: 60px;
     padding-bottom: 60px;
+
+    background-color: #ffffff;
   }
 
   .contacts__text {
