--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -3,7 +3,16 @@
   margin: 0 auto;
 }
 
+.form__wrapper {
+  padding-top: 15px;
+}
+
 .form__title {
+  margin: 0;
+  margin-bottom: 20px;
+  padding-right: 20px;
+  padding-left: 20px;
+
   font-weight: 400;
   font-size: 36px;
   line-height: 60px;
@@ -11,11 +20,47 @@
 }
 
 .form__tagline {
+  margin: 0;
+  margin-bottom: 25px;
+  padding-right: 20px;
+  padding-left: 20px;
+
   color: $black;
   text-transform: uppercase;
 }
 
+.form__program-wrapper-item {
+  padding-right: 20px;
+  padding-left: 20px;
+
+  &--basic {
+    border-bottom: 1px solid #ededed;
+  }
+
+  &--type {
+    padding-top: 15px;
+
+    border-bottom: 1px solid #ededed;
+  }
+
+  &--submit {
+    display: flex;
+    flex-direction: column;
+
+    text-align: center;
+  }
+}
+
+.form__block {
+  margin: 0;
+  padding: 0;
+
+  border: none;
+}
+
 .form__item {
+  margin: 0;
+
   font-size: 16px;
   color: $input-black;
   text-transform: uppercase;
@@ -28,19 +73,67 @@
 }
 
 .form__block-title {
+  position: relative;
+
+  margin-bottom: 30px;
+
   font-weight: 400;
   font-size: 24px;
   line-height: 24px;
+
+  &--contacts {
+    width: 181px;
+
+    &::after {
+      content: "";
+      position: absolute;
+      top: 15px;
+      right: -119px;
+
+      width: 99px;
+      height: 3px;
+
+      background-color: $green;
+    }
+  }
+
+  &--comment {
+    &::after {
+      content: "";
+      position: absolute;
+      top: 50%;
+      right: -180px;
+
+      width: 158px;
+      height: 3px;
+
+      background-color: $green;
+      transform: translateY(-50%);
+    }
+  }
+
+  &--additionally {
+    &::after {
+      content: "";
+      position: absolute;
+      top: 50%;
+      right: -159px;
+
+      width: 136px;
+      height: 3px;
+
+      background-color: $green;
+      transform: translateY(-50%);
+    }
+  }
 }
 
 .form__textarea {
+  width: 100%;
+  min-height: 150px;
+
   font: inherit;
   text-transform: uppercase;
-}
-
-.form__submit-wrapper {
-  display: flex;
-  flex-direction: column;
 }
 
 .form__required {
@@ -53,13 +146,116 @@
     width: 768px;
   }
 
+  .form__wrapper {
+    padding-right: 30px;
+    padding-left: 30px;
+  }
+
   .form__title {
+    margin-bottom: 50px;
+    padding: 0;
+
     font-size: 60px;
   }
 
   .form__tagline {
+    width: 384px;
+    margin-bottom: 70px;
+    padding-right: 0;
+    padding-left: 37px;
+
     font-size: 20px;
     line-height: 30px;
+  }
+
+  .form__program-wrapper-item {
+    padding-right: 37px;
+    padding-left: 37px;
+
+    border-bottom: none;
+
+    &--submit {
+      flex-direction: row;
+    }
+  }
+
+  .form__block {
+    &--type {
+      border: 1px solid #e6e6e6;
+    }
+  }
+
+  .form__block-title {
+    font-size: 36px;
+    line-height: 36px;
+
+    &--contacts {
+      width: auto;
+
+      &::before {
+        content: "";
+        position: absolute;
+        top: 50%;
+        left: -67px;
+
+        width: 30px;
+        height: 3px;
+
+        background-color: $green;
+        transform: translateY(-50%);
+      }
+
+      &::after {
+        top: 50%;
+        right: -189px;
+
+        width: 146px;
+
+        transform: translateY(-50%);
+      }
+    }
+
+    &--comment {
+      &::before {
+        content: "";
+        position: absolute;
+        top: 50%;
+        left: -67px;
+
+        width: 30px;
+        height: 3px;
+
+        background-color: $green;
+        transform: translateY(-50%);
+      }
+
+      &::after {
+        right: -521px;
+
+        width: 480px;
+      }
+    }
+
+    &--additionally {
+      &::before {
+        content: "";
+        position: absolute;
+        top: 50%;
+        left: -67px;
+
+        width: 30px;
+        height: 3px;
+
+        background-color: $green;
+        transform: translateY(-50%);
+      }
+
+      &::after {
+        right: -490px;
+
+        width: 447px;
+      }
+    }
   }
 
   .form__item {
@@ -67,21 +263,20 @@
     line-height: 20px;
   }
 
-  .form__block-title {
-    font-size: 36px;
-    line-height: 36px;
-  }
-
   .form__additional-wrapper {
     flex-direction: row;
   }
 
-  .form__submit-wrapper {
-    flex-direction: row;
+  .form__textarea {
+    min-height: 170px;
   }
 
   .form__required {
     font-size: 16px;
+  }
+
+  .form-submit {
+    margin-right: 60px;
   }
 }
 
@@ -90,11 +285,88 @@
     width: 1440px;
   }
 
+  .form__wrapper {
+    padding-right: 70px;
+    padding-left: 70px;
+  }
+
+  .form__title {
+    padding-right: 40px;
+    padding-left: 40px;
+  }
+
+  .form__tagline {
+    width: 405px;
+    padding-right: 40px;
+    padding-left: 40px;
+  }
+
   .form__program-wrapper {
     display: flex;
   }
 
+  .form__program-wrapper-item {
+    padding-right: 40px;
+    padding-left: 40px;
+
+    &--flex {
+      display: flex;
+      width: 50%;
+    }
+  }
+
+  .form__block {
+    &--type {
+      width: 100%;
+    }
+  }
+
+  .form__block-title {
+    &--contacts {
+      &::before {
+        left: -110px;
+
+        width: 70px;
+      }
+
+      &::after {
+        right: -818px;
+
+        width: 777px;
+      }
+    }
+
+    &--comment {
+      &::before {
+        left: -110px;
+
+        width: 70px;
+      }
+
+      &::after {
+        right: -1150px;
+
+        width: 1111px;
+      }
+    }
+
+    &--additionally {
+      &::before {
+        left: -110px;
+
+        width: 70px;
+      }
+
+      &::after {
+        right: -1119px;
+
+        width: 1078px;
+      }
+    }
+  }
+
   .form__contacts-wrapper {
     display: flex;
+    justify-content: space-between;
   }
 }
