Изменил пути картинок в css. Теперь отображаться будут.

--- a/source/sass/blocks/features.scss
+++ b/source/sass/blocks/features.scss
@@ -43,25 +43,25 @@
   }
 
   &--nutrients::before {
-    background-image: url("../../img/advantage-leaf@1x.png");
+    background-image: url("../img/advantage-leaf@1x.png");
     background-repeat: no-repeat;
     background-position: 50% 50%;
   }
 
   &--powder::before {
-    background-image: url("../../img/advantage-powder@1x.png");
+    background-image: url("../img/advantage-powder@1x.png");
     background-repeat: no-repeat;
     background-position: 50% 50%;
   }
 
   &--eating::before {
-    background-image: url("../../img/advantage-dining@1x.png");
+    background-image: url("../img/advantage-dining@1x.png");
     background-repeat: no-repeat;
     background-position: 50% 50%;
   }
 
   &--month::before {
-    background-image: url("../../img/advantage-clock@1x.png");
+    background-image: url("../img/advantage-clock@1x.png");
     background-repeat: no-repeat;
     background-position: 50% 50%;
   }
