--- a/source/sass/blocks/additional.scss
+++ b/source/sass/blocks/additional.scss
@@ -97,7 +97,7 @@
 .additional__offer {
   min-height: 289px;
 
-  background-image: url("../../img/gift-photo-mobile@1x.jpg");
+  background-image: url("../img/gift-photo-mobile@1x.jpg");
   background-repeat: no-repeat;
   background-position: 0 0;
 }
