--- a/source/sass/blocks/programs.scss
+++ b/source/sass/blocks/programs.scss
@@ -11,7 +11,7 @@
 
   color: #ffffff;
 
-  background-image: url("../../img/index-background-mobile@1x.jpg");
+  background-image: url("../img/index-background-mobile@1x.jpg");
   background-repeat: no-repeat;
   background-position: 0 0;
 }
