--- a/source/sass/blocks/social.scss
+++ b/source/sass/blocks/social.scss
@@ -21,7 +21,7 @@
     height: 12px;
     margin-right: 37px;
 
-    background-image: url("../../img/icon-vk-mobile.svg");
+    background-image: url("../img/icon-vk-mobile.svg");
     background-repeat: no-repeat;
     background-position: 0 0;
   }
@@ -31,7 +31,7 @@
     height: 16px;
     margin-right: 40px;
 
-    background-image: url("../../img/icon-insta-mobile.svg");
+    background-image: url("../img/icon-insta-mobile.svg");
     background-repeat: no-repeat;
     background-position: 0 0;
   }
@@ -40,7 +40,7 @@
     width: 10px;
     height: 19px;
 
-    background-image: url("../../img/icon-fb-mobile.svg");
+    background-image: url("../img/icon-fb-mobile.svg");
     background-repeat: no-repeat;
     background-position: 0 0;
   }
