--- a/source/sass/blocks/button.scss
+++ b/source/sass/blocks/button.scss
@@ -1,8 +1,8 @@
 .button {
   display: block;
-  padding-top: 10px;
+  padding-top: 11px;
   padding-right: 25px;
-  padding-bottom: 12px;
+  padding-bottom: 11px;
   padding-left: 25px;
 
   font-size: 16px;
@@ -13,6 +13,11 @@
 
   background-color: $green;
   border: none;
+
+  &--program {
+    font-size: 14px;
+    line-height: 18px;
+  }
 
   &--all {
     color: $light-black;
