--- a/source/sass/blocks/features.scss
+++ b/source/sass/blocks/features.scss
@@ -1,12 +1,14 @@
 .features {
   width: 320px;
   margin: 0 auto;
+  margin-bottom: 45px;
 }
 
 .features__title {
   width: (280px / 320px) * 100%;
   margin: 0 auto;
-  margin-bottom: 20px;
+  margin-top: -5px;
+  margin-bottom: 28px;
   margin-left: 20px;
 
   font-weight: 400;
@@ -24,7 +26,7 @@
 
   width: (280px / 320px) * 100%; //87.5%
   margin: 0 auto;
-  margin-bottom: 20px;
+  margin-bottom: 23px;
   padding-left: 80px;
 
   // &:last-child {
@@ -69,6 +71,7 @@
 
 .features__text {
   margin: 0;
+  padding-top: 3px;
 
   font-family: $arial;
 }
