--- a/source/sass/blocks/page-header.scss
+++ b/source/sass/blocks/page-header.scss
@@ -1,4 +1,6 @@
 .page-header {
+  position: relative;
+
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -13,16 +15,11 @@
 }
 
 .page-header__logo {
-  position: relative;
-
-  height: 65px;
-  // padding-top: 11px;
+  min-height: 66px;
+  padding-top: 13px;
+  padding-left: 15px;
 
   border-bottom: 1px solid #e6e6e6;
-}
-
-.page-header__logo-image {
-  padding-top: 11px;
 }
 
 .page-header__nav-toggle {
