--- a/source/sass/blocks/program-types.scss
+++ b/source/sass/blocks/program-types.scss
@@ -26,6 +26,7 @@
   position: relative;
 
   margin: 0;
+  margin-top: 10px;
   margin-bottom: 30px;
   padding-left: 70px;
 
@@ -38,8 +39,8 @@
   &::before {
     content: "";
     position: absolute;
-    top: 0;
-    left: 0;
+    top: -6px;
+    left: 2px;
 
     width: 50px;
     height: 50px;
@@ -51,8 +52,8 @@
 
 .program-types__text {
   margin: 0;
-  margin-bottom: 15px;
-  padding-bottom: 20px;
+  margin-bottom: 20px;
+  padding-bottom: 21px;
 
   font-family: $arial;
 
@@ -71,9 +72,9 @@
     content: "";
     position: absolute;
     top: 50%;
-    right: -30px;
+    right: -28px;
 
-    width: 20px;
+    width: 17px;
     height: 3px;
 
     background-color: $black;
@@ -84,9 +85,9 @@
     content: "";
     position: absolute;
     top: 50%;
-    right: -37px;
+    right: -34px;
 
-    border: 7px solid $black;
+    border: 6px solid $black;
     border-top-color: transparent;
     border-right: none;
     border-bottom-color: transparent;
