--- a/source/sass/blocks/copyright.scss
+++ b/source/sass/blocks/copyright.scss
@@ -1,7 +1,20 @@
 .copyright {
   display: flex;
   justify-content: space-between;
-  padding-top: 30px;
+  align-items: center;
+  padding-top: 17px;
+}
+
+.copyright__link {
+  font-size: 16px;
+  line-height: 16px;
+  font-family: "Arial", sans-serif;
+  color: $light-black;
+}
+
+.copyright__logo {
+  margin-top: 2px;
+  margin-right: -6px;
 }
 
 @media (min-width: $tablet-width) {
