--- a/source/sass/blocks/social.scss
+++ b/source/sass/blocks/social.scss
@@ -1,6 +1,6 @@
 .social {
-  padding-top: 20px;
-  padding-bottom: 20px;
+  padding-top: 23px;
+  padding-bottom: 21px;
 
   border-bottom: 1px solid #d9d9d9;
 }
@@ -9,8 +9,18 @@
   @include list-reset;
 
   display: flex;
-  justify-content: center;
   align-items: center;
+  padding-left: 73px;
+}
+
+.social__item {
+  &--vkontakte {
+    margin-right: 37px;
+  }
+
+  &--instagram {
+    margin-right: 40px;
+  }
 }
 
 .social__link {
@@ -19,7 +29,6 @@
   &--vkontakte {
     width: 22px;
     height: 12px;
-    margin-right: 37px;
 
     background-image: url("../img/icon-vk-mobile.svg");
     background-repeat: no-repeat;
@@ -29,7 +38,6 @@
   &--instagram {
     width: 16px;
     height: 16px;
-    margin-right: 40px;
 
     background-image: url("../img/icon-insta-mobile.svg");
     background-repeat: no-repeat;
