--- a/source/sass/blocks/button.scss
+++ b/source/sass/blocks/button.scss
@@ -25,3 +25,15 @@
     background-color: $gray;
   }
 }
+
+@media (min-width: $tablet-width) {
+  .button {
+    &--program {
+      padding-top: 16px;
+      padding-bottom: 16px;
+
+      font-size: 20px;
+      line-height: 20px;
+    }
+  }
+}
