--- a/source/sass/blocks/example.scss
+++ b/source/sass/blocks/example.scss
@@ -153,16 +153,22 @@
 
   .example__wrapper {
     width: 708px;
+    padding-top: 43px;
+  }
+
+  .example__wrapper-big {
+    padding: 0;
   }
 
   .example__title {
-    margin-bottom: 60px;
+    margin-bottom: 65px;
 
     font-size: 60px;
   }
 
   .example__text {
-    margin-bottom: 50px;
+    width: auto;
+    margin-bottom: 52px;
 
     font-size: 16px;
     line-height: 24px;
@@ -174,18 +180,22 @@
   }
 
   .example__list {
-    width: 370px;
+    width: 366px;
+    margin: 0;
   }
 
   .example__value {
     width: 162px;
     height: 72px;
+    padding-top: 15px;
 
     font-size: 30px;
     line-height: 37px;
   }
 
   .example__parameter {
+    top: -11px;
+
     width: 140px;
     padding-right: 5px;
     padding-left: 5px;
@@ -196,9 +206,15 @@
 
   .example__description {
     width: 190px;
+    padding-top: 12px;
 
     font-size: 20px;
     text-align: right;
+  }
+
+  .example__description-text {
+    display: block;
+    margin-bottom: 9px;
   }
 
   .example__toggle {
