--- a/source/sass/blocks/features.scss
+++ b/source/sass/blocks/features.scss
@@ -79,10 +79,13 @@
 @media (min-width: $tablet-width) {
   .features {
     width: 768px;
+    margin-bottom: 0;
+
+    border-bottom: 1px solid #e6e6e6;
   }
 
   .features__title {
-    margin-bottom: 60px;
+    margin-bottom: 72px;
     margin-left: 30px;
 
     font-size: 60px;
@@ -93,18 +96,23 @@
     display: flex;
     flex-wrap: wrap;
     // justify-content: space-between;
+    padding-bottom: 102px;
   }
 
   .features__item {
     width: 50%;
-    margin-bottom: 90px;
-    padding-top: 110px;
-    padding-right: 80px;
+    margin-bottom: 135px;
+    padding-top: 111px;
+    padding-right: 90px;
     padding-left: 30px;
 
-    // &:last-child {
-    //   margin-bottom: 90px;
-    // }
+    &:nth-last-child(2) {
+      margin-bottom: 0;
+    }
+
+    &:last-child {
+      margin-bottom: 0;
+    }
 
     &::before {
       top: 0;
@@ -116,6 +124,8 @@
   }
 
   .features__text {
+    padding: 0;
+
     font-size: 16px;
     line-height: 24px;
   }
