--- a/source/sass/blocks/main-nav.scss
+++ b/source/sass/blocks/main-nav.scss
@@ -3,8 +3,8 @@
 }
 
 .main-nav__item {
-  height: 66px;
-  padding-top: 20px;
+  padding-top: 22px;
+  padding-bottom: 23px;
 
   text-align: center;
 
@@ -18,6 +18,7 @@
 @media (min-width: $tablet-width) {
   .main-nav {
     width: 440px;
+    padding-top: 42px;
   }
 
   .main-nav__list {
@@ -26,6 +27,8 @@
   }
 
   .main-nav__item {
+    padding: 0;
+
     font-weight: 400;
     font-size: 18px;
     line-height: 25px;
