--- a/source/sass/blocks/page-header.scss
+++ b/source/sass/blocks/page-header.scss
@@ -15,8 +15,8 @@
 }
 
 .page-header__logo {
-  min-height: 66px;
   padding-top: 13px;
+  padding-bottom: 12px;
   padding-left: 15px;
 
   border-bottom: 1px solid #e6e6e6;
@@ -42,7 +42,7 @@
     position: absolute;
     right: 20px;
 
-    width: 20px;
+    width: 23px;
     height: 2px;
 
     background-color: #000000;
@@ -62,9 +62,13 @@
   .page-header {
     flex-direction: row;
     width: 708px;
+    margin-bottom: 73px;
   }
 
   .page-header__logo {
+    padding: 0;
+    padding-top: 20px;
+
     border: none;
   }
 
