--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -35,9 +35,9 @@
 @media (min-width: $tablet-width) {
   .contacts {
     width: 768px;
-    padding-top: 60px;
+    padding-top: 65px;
     padding-right: 30px;
-    padding-bottom: 50px;
+    padding-bottom: 57px;
     padding-left: 30px;
   }
 
@@ -54,6 +54,12 @@
     padding-right: 40px;
 
     font-size: 16px;
+    text-align: right;
+  }
+
+  .contacts__address-street {
+    display: block;
+    margin-bottom: 19px;
   }
 }
 
