--- a/source/sass/blocks/social.scss
+++ b/source/sass/blocks/social.scss
@@ -1,6 +1,6 @@
 .social {
   padding-top: 23px;
-  padding-bottom: 21px;
+  padding-bottom: 20px;
 
   border-bottom: 1px solid #d9d9d9;
 }
@@ -14,13 +14,19 @@
 }
 
 .social__item {
-  &--vkontakte {
-    margin-right: 37px;
+  margin-right: 38px;
+
+  &:last-child {
+    margin-right: 0;
   }
 
-  &--instagram {
-    margin-right: 40px;
-  }
+  // &--vkontakte {
+  //   margin-right: 37px;
+  // }
+
+  // &--instagram {
+  //   margin-right: 40px;
+  // }
 }
 
 .social__link {
@@ -59,5 +65,43 @@
     padding: 0;
 
     border: none;
+  }
+
+  .social__list {
+    padding-left: 0;
+  }
+
+  .social__item {
+    margin-right: 28px;
+
+    &:last-child {
+      margin-right: 0;
+    }
+    // &--vkontakte {
+    //   margin-right: 37px;
+    // }
+
+    // &--instagram {
+    //   margin-right: 40px;
+    // }
+  }
+
+  .social__link {
+    display: block;
+
+    &--vkontakte {
+      width: 30px;
+      height: 16px;
+    }
+
+    &--instagram {
+      width: 23px;
+      height: 23px;
+    }
+
+    &--facebook {
+      width: 14px;
+      height: 28px;
+    }
   }
 }
