--- a/source/sass/blocks/features.scss
+++ b/source/sass/blocks/features.scss
@@ -134,15 +134,22 @@
 @media (min-width: $desktop-width) {
   .features {
     width: 1300px;
+
+    border-bottom: none;
   }
 
   .features__title {
     margin-left: 40px;
   }
 
+  .features__list {
+    padding-bottom: 0;
+  }
+
   .features__item {
     width: (100% / 4);
-    padding-top: 100px;
+    margin-bottom: 0;
+    padding-top: 112px;
     padding-right: 40px;
     padding-left: 40px;
 
