Изменил расположение отступа от шапки.

--- a/source/sass/blocks/programs.scss
+++ b/source/sass/blocks/programs.scss
@@ -52,6 +52,7 @@
   .programs {
     width: 768px;
     margin: 0 auto;
+    margin-top: 73px;
     margin-bottom: 20px;
 
     text-align: left;
@@ -105,6 +106,7 @@
 @media (min-width: $desktop-width) {
   .programs {
     width: 1300px;
+    margin-top: 122px;
     margin-bottom: 77px;
   }
 
