--- a/source/sass/blocks/example.scss
+++ b/source/sass/blocks/example.scss
@@ -13,6 +13,17 @@
   padding-bottom: 35px;
 }
 
+.example__title {
+  margin: 0;
+  margin-bottom: 24px;
+  margin-left: 20px;
+
+  font-weight: 400;
+  font-size: 36px;
+  line-height: 60px;
+  color: $black;
+}
+
 .example__wrapper-big {
   display: flex;
   flex-direction: column;
@@ -22,16 +33,6 @@
     padding-right: 20px;
     padding-left: 20px;
   }
-}
-
-.example__title {
-  margin: 0;
-  margin-bottom: 24px;
-
-  font-weight: 400;
-  font-size: 36px;
-  line-height: 60px;
-  color: $black;
 }
 
 .example__text {
@@ -149,11 +150,20 @@
 @media (min-width: $tablet-width) {
   .example {
     width: 768px;
+
+    background-color: #ffffff;
   }
 
   .example__wrapper {
-    padding-top: 0;
+    padding-top: 43px;
     padding-bottom: 0;
+  }
+
+  .example__title {
+    margin-bottom: 21px;
+    margin-left: 30px;
+
+    font-size: 60px;
   }
 
   .example__wrapper-big {
@@ -166,18 +176,14 @@
       padding-bottom: 237px;
       padding-left: 30px;
 
-      background-color: #ffffff;
+      // background-color: #ffffff;
     }
 
     &--slider {
       padding-bottom: 68px;
+
+      background-color: $gray;
     }
-  }
-
-  .example__title {
-    margin-bottom: 65px;
-
-    font-size: 60px;
   }
 
   .example__text {
@@ -210,7 +216,7 @@
   .example__parameter {
     top: -11px;
 
-    width: 140px;
+    width: auto;
     padding-right: 5px;
     padding-left: 5px;
 
@@ -294,20 +300,37 @@
   }
 
   .example__wrapper {
+    width: 1440px;
+    // display: flex;
+    padding-top: 125px;
+    // padding-right: 40px;
+    // padding-left: 40px;
+  }
+
+  .example__title {
+    margin-bottom: 76px;
+    margin-left: 110px;
+  }
+
+  .example__wrapper-inner {
     display: flex;
-    width: 1300px;
+    padding-right: 70px;
+    padding-bottom: 65px;
+    padding-left: 70px;
+
+    background-color: $gray;
+  }
+
+  .example__wrapper-big {
+    width: 50%;
+    padding-top: 72px;
     padding-right: 40px;
     padding-bottom: 0;
     padding-left: 40px;
   }
 
-  .example__wrapper-big {
-    width: 50%;
-    padding-right: 40px;
-    padding-left: 40px;
-  }
-
   .example__text {
+    width: 435px;
     margin-bottom: 70px;
   }
 
@@ -317,7 +340,11 @@
   }
 
   .example__list {
-    margin-bottom: 50px;
+    margin-bottom: 28px;
+  }
+
+  .example__parameter {
+    background-color: $gray;
   }
 
   .example__description {
@@ -326,5 +353,9 @@
     width: 325px;
 
     text-align: left;
+  }
+
+  .example__before {
+    margin-bottom: 55px;
   }
 }
